# FinalCode_DroneFullPro

./: CMakeLists.txt
General/: CMakeLists.txt  General.c  MPU6050_I2C.c  MPU6050_I2C.h  Uart.c  Uart.h
General/motor/: CMakeLists.txt
General/motor/include/: Motor_ESC.h
General/mpu6050/: CMakeLists.txt
General/mpu6050/include/: MPU6050_I2C.h
General/uart/: CMakeLists.txt
General/uart/include/: Uart.h
General/uart/src/: Uart.c
IMU/: CMakeLists.txt  MPU6050_I2C.c  MPU6050_I2C.h
Motor_ESC/: CMakeLists.txt  Control_Motor_Ej.c  Motor_ESC.c  Motor_ESC.h
Radio_Frecuencia/: CMakeLists.txt
Radio_Frecuencia/Uart/: CMakeLists.txt  Uart.c
